--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@walletconnect/web3wallet": "^1.10.2",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.5",
