--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "simple",
+  "name": "simple78121",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon ./app.js"
   },
