--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: NPM Publish
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   publish:
@@ -25,4 +25,4 @@ jobs:
       - name: Publish to NPM
         run: npm publish --access=public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH }}
