modified:   package.json 	deleted:    temp/ss_1083973737.jpeg 	deleted:    temp/ss_1217252255.jpeg 	deleted:    temp/ss_1224426778.jpeg 	deleted:    temp/ss_1249927022.jpeg 	deleted:    temp/ss_1284099700.jpeg 	deleted:    temp/ss_1299424587.jpeg 	deleted:    temp/ss_1502687345.jpeg 	deleted:    temp/ss_1524378820.jpeg 	deleted:    temp/ss_1553445040.jpeg 	deleted:    temp/ss_1653168346.jpeg 	deleted:    temp/ss_2001386585.jpeg 	deleted:    temp/ss_2036973385.jpeg 	deleted:    temp/ss_2123272199.jpeg 	deleted:    temp/ss_2371178374.jpeg 	deleted:    temp/ss_2423165617.jpeg 	deleted:    temp/ss_2720768291.jpeg 	deleted:    temp/ss_2796871267.jpeg 	deleted:    temp/ss_3040192961.jpeg 	deleted:    temp/ss_3194311103.jpeg 	deleted:    temp/ss_3519667839.jpeg 	deleted:    temp/ss_3683816290.jpeg 	deleted:    temp/ss_3799015352.jpeg 	deleted:    temp/ss_3848709345.jpeg 	deleted:    temp/ss_3952388240.jpeg 	deleted:    temp/ss_4051276693.jpeg 	deleted:    temp/ss_4300006671.jpeg 	deleted:    temp/ss_4426288215.jpeg 	deleted:    temp/ss_4942343271.jpeg 	deleted:    temp/ss_5105297881.jpeg 	deleted:    temp/ss_5162512490.jpeg 	deleted:    temp/ss_5181266703.jpeg 	deleted:    temp/ss_5185885514.jpeg 	deleted:    temp/ss_5703077397.jpeg 	deleted:    temp/ss_5757351330.jpeg 	deleted:    temp/ss_5893910650.jpeg 	deleted:    temp/ss_5981007699.jpeg 	deleted:    temp/ss_6048772861.jpeg 	deleted:    temp/ss_6163600289.jpeg 	deleted:    temp/ss_6172214441.jpeg 	deleted:    temp/ss_6193682459.jpeg 	deleted:    temp/ss_6304317583.jpeg 	deleted:    temp/ss_6399070555.jpeg 	deleted:    temp/ss_6416355076.jpeg 	deleted:    temp/ss_6459627833.jpeg 	deleted:    temp/ss_6853296279.jpeg 	deleted:    temp/ss_6885325500.jpeg 	deleted:    temp/ss_7318091634.jpeg 	deleted:    temp/ss_7477177458.jpeg 	deleted:    temp/ss_7529227314.jpeg 	deleted:    temp/ss_7556442900.jpeg 	deleted:    temp/ss_7648314153.jpeg 	deleted:    temp/ss_7850396311.jpeg 	deleted:    temp/ss_7853470856.jpeg 	deleted:    t

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "simple7812",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon ./app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "YUTHISH",
   "license": "ISC",
   "dependencies": {
     "@walletconnect/web3wallet": "^1.10.2",
