--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -30,6 +30,8 @@ jobs:
           echo "npm version: $(npm --version)"
       - name: Delay
         run: sleep 30s  # Add a delay of 30 seconds
+      - name: Login to npm
+        run: npm login
       - name: Publish to NPM
         run: npm publish --access=public
         env:
